# dimsim

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/actions/include-openeye/: action.yaml
.github/workflows/: ci.yml  gh-ci.yaml
devtools/conda-envs/: dev.yaml  docs.yaml  test.yaml
dimsim/: __init__.py  base.py  plugins.py  thermodynamics.py
dimsim/_tests/: test_dimsim.py  utils.py
dimsim/_tests/coordinates/: conftest.py  test_box.py  test_store.py
dimsim/_tests/data/thermoml/: README.md  single_dhvap.xml  single_osmotic.xml  test.sqlite
dimsim/_tests/datasets/: test_thermoml.py
dimsim/_tests/utils/: test_pydantic.py
dimsim/attributes/: __init__.py  attributes.py  typing.py
dimsim/configs/: __init__.py  base.py  phase.py  workflow.py
dimsim/configs/properties/: __init__.py  base.py  density.py  dhmix.py  dhvap.py  osmotic_coefficient.py
dimsim/configs/protocols/: __init__.py  base.py  coordinates.py  equilibration.py  minimization.py  simulation.py  system.py
dimsim/configs/targets/: thermo.py
dimsim/coordinates/: __init__.py  box.py  store.py
dimsim/datasets/: dataset.py  datasets.py  entry.py  plugins.py  provenance.py  thermoml.py
dimsim/datasets/thermoml/: __init__.py  plugins.py  thermoml.py
dimsim/ops/: base.py  density.py  osmotic_coefficient.py  utils.py
dimsim/properties/: binding.py  density.py  dielectric.py  enthalpy.py  properties.py
dimsim/protocols/: __init__.py  base.py  coordinates.py  equilibration.py  minimization.py  simulation.py  system.py
dimsim/server/: client.py
dimsim/substances/: __init__.py  amounts.py  components.py  substances.py
dimsim/trajectories/: store.py
dimsim/utils/: openmm.py  pydantic.py  serialization.py
dimsim/workflow/: task.py  workflow.py
docs/: CHANGELOG.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
